--- a/split_test_in_test_val.ipynb
+++ b/split_test_in_test_val.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPr7CLaHswLXPQUvSvvJabQ",
+      "authorship_tag": "ABX9TyP8ZKY2HEHvT2XOorcy11TJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hj_aRYhLPYSU",
-        "outputId": "79cd37d9-57aa-4a78-9a5b-59e569f55a0a"
+        "outputId": "04aae7ca-5f6d-46b2-d610-011cff74a2ea"
       },
       "outputs": [
         {
@@ -62,7 +62,7 @@
           "height": 35
         },
         "id": "l_QD8QtSPmIq",
-        "outputId": "6934c2b2-9ed5-4444-fae4-bb948322076d"
+        "outputId": "200b6e6a-7d8e-4677-8558-e5dbed51428d"
       },
       "execution_count": 2,
       "outputs": [
@@ -91,7 +91,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AKVapP9kP0Qy",
-        "outputId": "542ef30d-5f60-439a-b71b-6eb07a21198d"
+        "outputId": "10056e3c-e481-4f8b-afe0-baf177d1f78a"
       },
       "execution_count": 3,
       "outputs": [
@@ -130,7 +130,7 @@
         "id": "z8JAAsPAP-jT",
         "outputId": "3c8e32c4-b00e-47ce-ef25-9ea0ac79cbc4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -156,7 +156,7 @@
         "id": "IDyW-7eAP_17",
         "outputId": "3d8ba492-2ddb-4d56-c3b0-ca991a17b9c4"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -281,7 +281,7 @@
         "id": "wJLc5Q03QHL6",
         "outputId": "984a2465-0216-4940-c442-cb80eeda5017"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -402,7 +402,7 @@
       "metadata": {
         "id": "P3Yu5nsbQNbi"
       },
-      "execution_count": 16,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -413,7 +413,7 @@
       "metadata": {
         "id": "EnXYMGx8QgPi"
       },
-      "execution_count": 17,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -421,7 +421,7 @@
       "source": [
         "os.chdir(base_path + '/test_graz_original/x')\n",
         "\n",
-        "half_of_photos = len(os.listdir())\n",
+        "half_of_photos = int(len(os.listdir()) / 2)\n",
         "\n",
         "for i in sorted(os.listdir())[:half_of_photos]:\n",
         "  shutil.copy(i, base_path + '/test_graz/x')\n",
@@ -435,7 +435,7 @@
       "metadata": {
         "id": "EfD2U864Q1OK"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -454,14 +454,53 @@
       "metadata": {
         "id": "aL9HUbkbRwyS"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir(base_path + '/test_graz_original/x')\n",
+        "\n",
+        "half_of_photos = len(os.listdir()) / 2"
+      ],
+      "metadata": {
+        "id": "sa4QeI0QSmoi"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "half_of_photos"
+      ],
+      "metadata": {
+        "id": "nAgQSrPamjOC",
+        "outputId": "e279370a-1c76-490a-b474-a95536e50641",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "50.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sa4QeI0QSmoi"
+        "id": "svxmjdHcmlaz"
       },
       "execution_count": null,
       "outputs": []
